<resources>
<string name="app_name">Covid19 Track</string>
<string name="covid_19">covid-19</string>
<string name="q_a"><![CDATA[Q & A]]></string>
<string name="symptoms">Symptoms</string>
<string name="prevention">prevention</string>
<string name="helpline">helpline</string>
<string name="india_s_covid_19_status">INDIA\'S COVID 19 Pie Chart</string>
<string name="safety_measures">Safety Measures</string>
<string name="track_corono">track Corona</string>
<string name="active">active</string>
<string name="confirmed">confirmed</string>
<string name="recovered">recovered</string>
<string name="death">deaths</string>
<string name="india_s_covid_statistics">india\'s Covid 19 statistics</string>
<string name="state">state</string>
<string name="state_wise_statistics">state wise corona statistics</string>
<string name="andra_pradesh">andra Pradesh</string>
<string name="andaman_nicoabr"><![CDATA[andaman & nicoabr]]></string>
<string name="arunachal_pradesh">arunachal pradesh</string>
<string name="assam">assam</string>
<string name="bihar">bihar</string>
<string name="chandigarh">chandigarh</string>
<string name="chattisgarh">chattisgarh</string>
<string name="delhi">delhi</string>
<string name="daman_diu"><![CDATA[daman & diu]]></string>
<string name="himachal_pradesh">himachal pradesh</string>
<string name="jammu_khasmir"><![CDATA[jammu & khasmir]]></string>
<string name="mizoram">mizoram</string>
<string name="nagaland">nagaland</string>
<string name="odisha">odisha</string>
<string name="punjab">punjab</string>
<string name="puducherry">puducherry</string>
<string name="west_bengal">west bengal</string>
<string name="uttarakhand">uttarakhand</string>
<string name="uttar_pradesh">uttar pradesh</string>
<string name="tripura">tripura</string>
<string name="tamil_nadu">tamil nadu</string>
<string name="telangana">telangana</string>
<string name="sikkim">sikkim</string>
<string name="rajasthan">rajasthan</string>
<string name="karnataka">karnataka</string>
<string name="madhya_pradesh">madhya pradesh</string>
<string name="manipur">manipur</string>
<string name="meghalaya">meghalaya</string>
<string name="maharastra">maharastra</string>
<string name="lakshadweep">lakshadweep</string>
<string name="ladakh">ladakh</string>
<string name="kerala">kerala</string>
<string name="jharkhand">jharkhand</string>
<string name="haryana">haryana</string>
<string name="gujarat">gujarat</string>
<string name="goa">goa</string>
<string name="question">Question and Answers</string>
<string name="mostsym">Most common symptoms</string>
<string name="lesssym">less common symptoms</string>
<string name="l1">aches and pains</string>
<string name="l2">sore throat</string>
<string name="l3">diarrhoea</string>
<string name="l4">conjunctivitis</string>
<string name="l5">headache</string>
<string name="l6">loss of taste or smell</string>
<string name="l7">discolouration of fingers or toes</string>
<string name="sevsym">Serious symptoms</string>
<string name="s1">difficulty breathing or shortness of breath</string>
<string name="s2">chest pain or pressure</string>
<string name="s3">loss of speech or movement</string>
<string name="fever">fever</string>
<string name="dry_cough">dry cough</string>
<string name="tiredness">tiredness</string>
<string name="city_wise_corona_statistics">district wise corona statistics</string>
<string name="human">Can humans become infected with a novel coronavirus of animal source?</string>
<string name="please_click_below_to_view_daywise_statiscs">Click Below Buttons to view daywise statiscs</string>
<string name="andaman_nicobar_islands"><![CDATA[Andaman & nicobar Islands]]></string>
<string name="what_is_corona_virus">what is corona virus ?</string>
<string name="corona_ans">Coronaviruses are a large family of viruses that are known to cause illness ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS).</string>
<string name="corona_spread">Detailed investigations found that SARS-CoV was transmitted from civet cats to humans in China in 2002 and MERS-CoV from dromedary camels to humans in Saudi Arabia in 2012. Several known coronaviruses are circulating in animals that have not yet infected humans. As surveillance improves around the world, more coronaviruses are likely to be identified.</string>
<string name="transmission">Can coronaviruses be transmitted from person to person?</string>
<string name="is_vaccine">Is there a vaccine for a novel coronavirus?</string>
<string name="treatment">Is there a treatment for a novel coronavirus?</string>
<string name="treatment_ans">There is no specific treatment for disease caused by a novel coronavirus. However, many of the symptoms can be treated and therefore treatment based on the patient’s clinical condition. Moreover, supportive care for infected persons can be highly effective.</string>
<string name="infect">Detailed investigations found that SARS-CoV was transmitted from civet cats to humans in China in 2002 and MERS-CoV from dromedary camels to humans in Saudi Arabia in 2012. Several known coronaviruses are circulating in animals that have not yet infected humans. As surveillance improves around the world, more coronaviruses are likely to be identified.</string>
<string name="protect">What can I do to protect myself?</string>
<string name="protect_ans">Standard recommendations to reduce exposure to and transmission of a range of illnesses include maintaining basic hand and respiratory hygiene, and safe food practices  and avoiding close contact, when possible, with anyone showing symptoms of respiratory illness such as coughing and sneezing.</string>
<string name="vaccine_ans">When a disease is new, there is no vaccine until one is developed. It can take a number of years for a new vaccine to be developed.</string>
<string name="prevention_coroan">Prevention</string>
<string name="p1">Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.</string>
<string name="p2">Maintain at least 1 metre distance between you and people coughing or sneezing.</string>
<string name="p3">Avoid touching your face.</string>
<string name="p4">Cover your mouth and nose when coughing or sneezing.</string>
<string name="p5">Stay home if you feel unwell.</string>
<string name="p6">Refrain from smoking and other activities that weaken the lungs.</string>
<string name="src">Source: WHO</string>
<string name="p7">Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.</string>

<string name="trans_ans">Yes, some coronaviruses can be transmitted from person to person, usually after close contact with an infected patient, for example, in a household workplace, or health care centre.</string>
<string name="helpline_numbers">helpline numbers</string>
<string name="an_n">03192-232102</string>
<string name="andra_n">0866-2410978</string>
<string name="_8558893911">8558893911</string>
<string name="_0471_2552056">0471-2552056</string>
<string name="a20_26127394">020-26127394</string>
<string name="_943994859">943994859</string>
<string name="_044_29510500">044-29510500</string>
<string name="_0381_2315879">0381-2315879</string>
<string name="_18001805145">18001805145</string>
<string name="_03323412600">03323412600</string>
<string name="_1800313444222">1800313444222</string>
<string name="_0141_2225624">0141-2225624</string>
<string name="_9436055743">9436055743</string>
<string name="_102">102</string>
<string name="_104">104</string>
<string name="_7005539653">7005539653</string>
<string name="_108">108</string>
<string name="_3852411668">3852411668</string>
<string name="_6913347770">6913347770</string>
<string name="_9779558282">9779558282</string>
<string name="_011_22307145">011-22307145</string>
<string name="_01912520982">01912520982</string>
<string name="_01982256462">01982256462</string>
<string name="swipe_right_to_view_state_wise_statictics">Swipe Right to View State wise statistics</string>
<string name="click_on_below_state_to_get_each_state_stattictics">Click On below State to get each state statistics</string>
<string name="covid_19_tracker">Covid 19 Tracker</string>
<string name="be_safe_fight_against_covid19">Be Safe</string>
<string name="be_healthy">Be Healthy</string>
    <string name="fight_against_covid_19">Fight Against Covid 19</string>
    <string name="current_location">Current Location</string>
    <string name="your_location_covid_19_status">Your Location Covid-19 status</string>
    <string name="date">Date:</string>
</resources>

