<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:id="@+id/cl"
    tools:context=".splashactivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_marginBottom="485dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/covid1"
            android:layout_gravity="center"
            android:layout_height="200dp">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/covid_19_tracker"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/be_safe_fight_against_covid19"
            android:layout_marginTop="25dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/be_healthy"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/fight_against_covid_19"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>