<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".c_question">

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/question"
                android:textAlignment="center"
                android:textColor="#4527A0"
                android:textSize="23sp">
            </TextView>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:autoPlay="false"
                app:showSeekBar="true"
                app:showVideoDuration="true"
                app:showFullScreenButton="false"
                app:showVideoCurrentTime="true"
                app:showYouTubeButton="true"
                app:videoId="OZcRD9fV7jo">
            </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="10">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="#A2D1F5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat"

                            android:text="@string/what_is_corona_virus"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/corona_ans"
                            android:textColor="#555553"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="#A2D1F5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/human"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/infect"
                            android:textColor="#555553"
                            android:textSize="14sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="#A2D1F5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/transmission"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/trans_ans"
                            android:textColor="#555553"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="#A2D1F5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/is_vaccine"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/vaccine_ans"
                            android:textColor="#555553"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="#A2D1F5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/treatment"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/treatment_ans"
                            android:textColor="#555553"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:layout_marginBottom="40dp"
                    app:cardBackgroundColor="#A2D1F5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/protect"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/protect_ans"
                            android:textColor="#555553"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>


        </LinearLayout>

    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>